const pratikImg = require("../../../assets/images/contacts/pratik.png");
const atulImg = require("../../../assets/images/contacts/atul.png");
const meghaImg = require("../../../assets/images/contacts/megha.png");
const sauravImg = require("../../../assets/images/contacts/saurav.png");
const varunImg = require("../../../assets/images/contacts/varun.png");
const batman = require("../../../assets/images/contacts/batman.jpg");
const captain = require("../../../assets/images/contacts/captain-america.jpg");
const hulk = require("../../../assets/images/contacts/hulk.jpg");
const ironman = require("../../../assets/images/contacts/ironman.jpeg");
const spiderMan = require("../../../assets/images/contacts/spiderman.jpeg");
const thsnos = require("../../../assets/images/contacts/batman.jpg");
const thor = require("../../../assets/images/contacts/thor.jpg");

const data = [
  {
    name: "Fouad Omri",
    thumbnail: pratikImg
  },
  {
    name: "Safa Omri",
    thumbnail: meghaImg
  },
  {
    name: "Darshit Patel",
    thumbnail: atulImg
  },
  {
    name: "Abhishek Leuva",
    thumbnail: sauravImg
  },
  {
    name: "James",
    thumbnail: varunImg
  },
  {
    name: "Batman",
    thumbnail: batman
  },
  {
    name: "Captain America",
    thumbnail: captain
  },
  {
    name: "Bruce Banner",
    thumbnail: hulk
  },
  {
    name: "Tony Stark",
    thumbnail: ironman
  },
  {
    name: "Peter Parker",
    thumbnail: spiderMan
  },
  {
    name: "Thanos",
    thumbnail: thsnos
  },
  {
    name: "Thor",
    thumbnail: thor
  }
];

module.exports = data;
